--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
   <head></head>
   <body>
-    <h1> week 3 </h1>
-    <p>i add demo only </p>
-    <img src='img/pic1.jpg'>
+    <h1> <a href="./my test.html">to my love </a>  </h1>
+  
   </body>
 </html>
