--- a/my test.html
+++ b/my test.html
@@ -3,10 +3,29 @@
     <title> my love </title>
   </head>
   <body>
-<a href="https://www.nkust.edu.tw">my school</a><br/>
+    <h1>Dessert</h1>
+    <h2>taipei</h2>
+<a href="https://www.juksy.com/archives/90500">舒芙雷</a><br/>
 
-<a href="https://www.nkust.edu.tw" target="＿blank"> my school </a><br/>
+<h1>Snack</h1>
+<h2>kaohsiung</h2>
+
+<a href="https://nellydyu.tw/blog/post/handtiantian" target="＿blank"> donut </a><br/>
+
+<h2>Waffle</h2>
 
 <a href="mailto:C109130136@nkust.edu.tw">email to me</a><br/>
+
+<table>
+  
+  <tr>
+    <td>1,1</td>
+    <td>1,2</td>
+  </tr>
+  <tr>
+    <td>2,1</td>
+    <td>2,2</td>
+  </tr>
+</table>
 </body>
 </html>
