--- a/my test.html
+++ b/my test.html
@@ -1,9 +1,19 @@
 <html>
   <head>
     <title> my love </title>
+    <h1>Dessert</h1>
+    <style>
+      h1{color:purple;
+        font-size:1.5em;
+      }
+      
+      h2{color:#00adff;
+        font-size:1.1em;
+      }
   </head>
   <body>
-    <h1>Dessert</h1>
+    
+    </style>
     <h2>taipei</h2>
 <a href="https://www.juksy.com/archives/90500">舒芙雷</a><br/>
 
@@ -12,7 +22,7 @@
 
 <a href="https://nellydyu.tw/blog/post/handtiantian" target="＿blank"> donut </a><br/>
 
-<h2>Waffle</h2>
+<h1>Waffle</h1>
 
 <a href="mailto:C109130136@nkust.edu.tw">email to me</a><br/>
 
