--- a/my test.html
+++ b/my test.html
@@ -24,7 +24,7 @@
 
 <h1>Waffle</h1>
 
-<a href="mailto:C109130136@nkust.edu.tw">email to me</a><br/>
+<a href="mailto:linchao@nkust.edu.tw">email to teacher</a><br/>
 
 <table>
   
