--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
   <head></head>
   <body>
-    <h1> <a href="./my test.html">to my love </a>  </h1>
+    <h1> <a href="./my test.html">To my love </a>  </h1>
+    
+    <img src="img/pic2.jpg">
+    <br/>
+    <ul>
+      
+  <li><a href="week6.html">week 6 work</a></li>
+  <li><a href="week 7.html">week 7 work</a></li>
   
+  </ul>
   </body>
 </html>
