--- a/week6.html
+++ b/week6.html
@@ -1,3 +1,5 @@
+<html>
+  <head>
 <style>
   p.title{
     text-align:center;
@@ -30,6 +32,10 @@
     float:left;
   }
 </style>
+  </head>
+  <body>
+    <a href="index.html">Home page</a><br/>
+ 
 
 
 
@@ -57,3 +63,5 @@
 <p>張角聞知事露，星夜舉兵，自稱天公將軍，─張寶稱地公將軍，張梁稱人公將軍─。申言於眾曰：「今漢運將終，大聖人出﹔汝等皆宜順從天意，以槳太平。」四方百姓，裹黃巾從張角反者，四五十萬。賊勢浩大，官軍望風而靡。何進奏帝火速降詔，令各處備禦，討賊立功；一面遣中郎將盧植，皇甫嵩，朱雋，各引精兵，分三路討之。</p>
 </div>
 </div>
+</body>
+</html>
