almost finish tired

--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
-<html>
-  <head></head>
-  <body>
-    <h1> <a href="./my test.html">To my love </a>  </h1>
-    
-    <img src="img/pic2.jpg">
-    <br/>
-    <ul>
-      
-  <li><a href="week6.html">week 6 work</a></li>
-  <li><a href="week 7.html">week 7 work</a></li>
-  
-  </ul>
-  </body>
+<!doctype html>
+<head>
+   <link rel="stylesheet" href="style.css">
+</head>
+<body>
+   <h1> <a href="./my test.html">To my love </a>  </h1>
+   <style>
+      h1{
+      color:orange;
+      font-size:3.5em;
+      text-align:center;
+      }
+   </style>
+   <img src="img/pic2.jpg">
+   <br/>
+   <style> 
+      li{
+      font-size:1.5em}
+   </style>
+   <ul>
+      <li><a href="week6.html">Romance of the Three Kingdoms Story</a></li>
+      <li><a href="week 7.html">paragraph</a></li>
+      <li><a href="week 7-1.html">practice</a></li>
+   </ul>
+</body>
 </html>
