--- a/my test.html
+++ b/my test.html
@@ -1,41 +1,26 @@
-<html>
-  <head>
-    <title> my love </title>
-    <h1>Dessert</h1>
-    <style>
-      h1{color:purple;
-        font-size:1.5em;
-      }
-      
-      h2{color:#00adff;
-        font-size:1.1em;
-      }
-  </head>
-  <body>
-    
-    </style>
-    <h2>taipei</h2>
-<a href="https://www.juksy.com/archives/90500">舒芙雷</a><br/>
-
-<h1>Snack</h1>
-<h2>kaohsiung</h2>
-
-<a href="https://nellydyu.tw/blog/post/handtiantian" target="＿blank"> donut </a><br/>
-
-<h1>Waffle</h1>
-
-<a href="mailto:C109130136@nkust.edu.tw">email to me</a><br/>
-
-<table>
-  
-  <tr>
-    <td>1,1</td>
-    <td>1,2</td>
-  </tr>
-  <tr>
-    <td>2,1</td>
-    <td>2,2</td>
-  </tr>
-</table>
-</body>
+<!DOCTYPE html>
+   <head>
+      <link rel="stylesheet" href="style.css">
+   </head>
+   <body>
+      <title> my love </title>
+      <h1>Dessert</h1>
+      <h2>taipei</h2>
+      <a href="https://www.juksy.com/archives/90500">舒芙雷</a><br/>
+      <h1>Snack</h1>
+      <h2>kaohsiung</h2>
+      <a href="https://nellydyu.tw/blog/post/handtiantian" target="＿blank"> donut </a><br/>
+      <h1>Waffle</h1>
+      <a href="mailto:C109130136@nkust.edu.tw">email to me</a><br/>
+      <table>
+         <tr>
+            <td>1,1</td>
+            <td>1,2</td>
+         </tr>
+         <tr>
+            <td>2,1</td>
+            <td>2,2</td>
+         </tr>
+      </table>
+   </body>
 </html>
