--- a/week 7.html
+++ b/week 7.html
@@ -1,28 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>Divs in HTML with style</title>
         <meta charset="utf-8" />
-        <style>
-            .container {
-                width: 100%;
-            }
-            .block {
-                float: left;
-                width: 40%;
-                border: solid red;
-                margin: 1em;
-            }
-            .block_break {
-                clear: left;
-                border: solid green;
-            }
-            #s001{
-              background-color:yellow;
-              border:solid ;
-              border-color:blue;
-            }
-        </style>
+       
     </head>
    
     <body>
