--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="week6.html">Romance of the Three Kingdoms Story</a></li>
       <li><a href="week 7.html">paragraph</a></li>
       <li><a href="week 7-1.html">practice</a></li>
+      <li><a href="calculator.html">calculator</a></li>
    </ul>
 </body>
 </html>
