--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="week 7.html">paragraph</a></li>
       <li><a href="week 7-1.html">practice</a></li>
       <li><a href="calculator.html">calculator</a></li>
+      <li><a href="week12.html">hamster</a></li>
    </ul>
 </body>
 </html>
