--- a/calculator.html
+++ b/calculator.html
@@ -30,6 +30,11 @@ body{
  function clr(e){
    scr.value=""
  }
+ function calc(){
+   x2=eval( scr.value )
+   x3=x2.toPrecision(15)
+   scr.value=parseFloat(x3)
+ }
 </script>
 </head>
 <body>
@@ -55,8 +60,8 @@ body{
  <input  class="special" type="button"  value="-" onclick="lclick(this)"> 
  <br/>
  <input  class="normal" type="button"  value="0" onclick="lclick(this)"> 
-  <input  class="special" type="button"  value="." onclick="lclick(this)"> 
-   <input  class="special" type="button"  value="=" > 
+ <input  class="special" type="button"  value="." onclick="lclick(this)"> 
+ <input  class="special" type="button"  value="=" onclick="calc(this)" > 
  <input  class="special" type="button"  value="+" onclick="lclick(this)">    
   
 </body>
