package & interest rates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1> <a href="./my test.html">To my love </a>  </h1>
+   <h1> <a href="./my test.html">My love </a>  </h1>
    <style>
       h1{
       color:orange;
@@ -15,7 +15,8 @@
    <br/>
    <style> 
       li{
-      font-size:1.5em}
+      font-size:1.5em
+      }
    </style>
    <ul>
       <li><a href="week6.html">Romance of the Three Kingdoms Story</a></li>
@@ -23,6 +24,7 @@
       <li><a href="week 7-1.html">practice</a></li>
       <li><a href="calculator.html">calculator</a></li>
       <li><a href="week12.html">hamster</a></li>
+      <li><a href="week 13.html">calc interest rates</a></li>
    </ul>
 </body>
 </html>
