--- a/week12.html
+++ b/week12.html
@@ -35,7 +35,7 @@
         
         if(e.src="file:///C:/temp/jswawa/img/o.png"){
           hitcount=hitcount+1
-          e.className= ""
+          e.className= "hit"
         }
       }
       
